<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titreLocalisation"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/txt_localisation_en_cours"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titreLocalisation"
        android:layout_centerHorizontal="true"

        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageLocalisation"
            android:layout_margin="30dp"
            android:background="@drawable/loading"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/progressCancelProgress"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:background="@drawable/croix"/>

    </RelativeLayout>




</RelativeLayout>