<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_reussi"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_toast">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titreReussi"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/txt_emplacement_enregistre"/>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:id="@+id/imageReussi"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/titreReussi"
        android:background="@drawable/voiture"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:id="@+id/imageReussi2"
        android:layout_below="@+id/titreReussi"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/park"/>

</RelativeLayout>